# clase-programacion-paralela-y-concurrente

./: CMakeLists.txt  README.md  cola_mensajes  cola_mensajes.cpp  pipe  pipe.cpp  seniales.cpp
proyecto-final/: proyecto_corregido.cpp  proyecto_defectuoso.cpp
semana1/clase/: cola_mensajes.cpp  cola_mensajes.h  pipe.cpp  seniales.cpp  seniales.h
semana1/tarea/: ColaMensajesPC.cpp  PipeBidireccional.cpp  PipeDosHijos  PipeDosHijos.cpp  SenialesSIGUSR.cpp
semana2/clase/: SocketCliente.cpp  SocketServer.cpp
semana2/tarea/: SocketClienteT  SocketClienteT.cpp  SocketServerT  SocketServerT.cpp
semana3/clase/: MemoriaCompartida  MemoriaCompartida.cpp
semana3/tarea/: MemoriaCompartidaAlterno  MemoriaCompartidaAlterno.cpp  MemoriaCompartidaT.cpp
semana4/clase/: PiMPI  PiMPI.c  SumaMPI  SumaMPI.c
semana5/clase/: Hilos1  Hilos1.cpp  Hilos2  Hilos2.cpp  Hilos3  Hilos3.cpp
semana5/tarea/: Hilos1  Hilos1.cpp  Hilos2  Hilos2.cpp  Hilos3.cpp
semana8/tarea/: ContadorSimple_P  ContadorSimple_P.cpp  ContadorSimple_S  ContadorSimple_S.cpp  ExTime  ExTime.cpp  MultiplicacionMatricial_P  MultiplicacionMatricial_P.cpp  MultiplicacionMatricial_S  MultiplicacionMatricial_S.cpp  MultiplicacionVectorial_P  MultiplicacionVectorial_P.cpp  MultiplicacionVectorial_S  MultiplicacionVectorial_S.cpp
